--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,18 @@
-1. Tag Line: (Typing effect)
+TODO:
+1. Increase size of h1, h2 and avatar?
+2. Add css for tagline h2. Add shadows for h1 and h2?
+
+Bugs:
+
+Ideas:
+1. Tag Line: (Typing effect) -- almost done
 	* Hacker, Coder, Engineer?
 	* Something with coffee
 	*Coding by day, hackrer by night.
 2. slide animation name/intro/photo 
 	OR
 	zoom out animation
-3. SVG Apple watch thing for skills*
+3. SVG Apple watch thing for skills* page 2.
 4. SVG animated name:
 	* https://github.com/dboudro/AnimateSVGText
 	* http://maxwellito.github.io/vivus/
@@ -14,6 +21,8 @@
 7. Text hides as you scroll: http://stefanerickson.github.io/covervid/
 8. Footer?
 9. For hacking: http://codepen.io/ramsaylanier/pen/raybzy
+10. Social Icons on the right corner
+11. Page 3 is projects direct copy from cygnus inventive
 
 Inspiration:
 0. http://codepen.io/digitalhour/pen/WvGJVV
@@ -25,9 +34,9 @@ Inspiration:
 6. http://scrollme.nckprsn.com/
 7. www.kfsoft.info/MyFloatingBg/demo.php
 8. http://tairemadailey.com/ -- Sections
+9. http://themeforest.net/item/coffee-cream-vcard-and-portfolio-html-template/full_screen_preview/4737939
+10. http://fittextjs.com -- responsive
+11. http://nick-jonas.github.io/windows/
 
 http://coolors.co/000000-322a26-454b66-677db7-9ca3db
 
-TODO:
-1. Increase size of h1?
-2. Add css for tagline h2. Add shadows for h1 and h2?
