--- a/TODO.txt
+++ b/TODO.txt
@@ -8,6 +8,7 @@ http://blog.venanti.us/web-app-2015/ -- minify details
 Bugs:
 
 Ideas:
+0. Show only first page, of viewed on mobile
 1. FullPage with 11 or 13
 8. Footer? + views counter?
 10. Page 3 is projects direct copy from cygnus inventive
